Removed Template content

--- a/src/template.html
+++ b/src/template.html
@@ -17,94 +17,6 @@
         </nav>
       </div>
     </header>
-    <div id="content">
-      <div class="container">
-        <section class="cards-grid">
-          <div class="content-card">
-            <img src="assets/img/napolitana.jpg" alt="Pizza napolitana" />
-            <div class="pizza-info">
-              <h3 class="pizza-title">
-                Napolitana <span class="price">$10.00</span>
-              </h3>
-              <p class="desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti, aliquam debitis.
-              </p>
-            </div>
-          </div>
-          <div class="content-card">
-            <img src="assets/img/Pizza-Pepperoni.jpg" alt="Pizza napolitana" />
-            <div class="pizza-info">
-              <h3 class="pizza-title">
-                Napolitana <span class="price">$10.00</span>
-              </h3>
-              <p class="desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti, aliquam debitis.
-              </p>
-            </div>
-          </div>
-        </section>
-      </div>
-      <h1 class="title">Bienvenidos a Pizzas Carmelos</h1>
-      <p class="info">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sunt
-        dignissimos numquam explicabo impedit cumque nostrum minus reiciendis?
-        Maiores, ullam!
-      </p>
-      <section class="hours">
-        <h4>Horarios</h4>
-        <div class="hours-information">
-          <p>Lunes: <span>11am - 21pm</span></p>
-          <p>Martes: <span>11am - 21pm</span></p>
-          <p>Miercoles: <span>11am - 21pm</span></p>
-          <p>Jueves: <span>11am - 21pm</span></p>
-          <p>Viernes: <span>11am - 21pm</span></p>
-          <p>Sabados: <span>12am - 23::59pm</span></p>
-          <p>Domingos: <span>11am - 23::59pm</span></p>
-        </div>
-      </section>
-
-      <h2 class="title-contact">Information</h2>
-      <section class="contact">
-        <h4>Contact</h4>
-        <p>tel: 1234 5678</p>
-        <p>dir: Advent Av. 156</p>
-      </section>
-
-      <section class="image-information">
-        <h4>Image attribution</h4>
-        <div class="attributions">
-          <p>
-            Estas imagenes no son mias y pertenecen a las siguientes paginas o
-            personas. El uso es solo con fines de estudio y practicas.
-          </p>
-          <p>
-            Background Image:
-            <a
-              href="https://www.freepik.es/foto-gratis/flat-lay-comida-mejicana-copyspace_4340486.htm#query=mesa%20comida%20madera&position=2&from_view=keyword&track=ais_hybrid&uuid=b60cdbb3-5574-4ef0-8dff-1fea959bbc89"
-              target="_blank"
-              >Freepik</a
-            >
-          </p>
-          <p>
-            Pizza Napolitana:
-            <a
-              href="https://osojimix.com/para-la-masa-de-pizza-napolitana-8-hrs-fermentacion/"
-              target="_blank"
-              >Image</a
-            >
-          </p>
-          <p>
-            Pizza de Pepperoni
-            <a
-              href="https://roviandaplus.com/producto/pizza-de-pepperoni/"
-              target="_blank"
-              >Image</a
-            >
-          </p>
-        </div>
-      </section>
-    </div>
+    <div id="content"></div>
   </body>
 </html>
